--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "bootstrap": "^5.0.0",
     "firebase": "^8.5.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-icons": "^1.4.0",
